tests/samples/valid/string_escapes.pn
fn main() -> i32
{
	print!("\n\r\t\'\"\\");
	var text = "0123\056789";
	var i = 0;
	{
		if i < |text|
		{
			if text[i] == 0
			{
				goto return;
			}
		}
		i = i + 1;
		loop;
	}
	return:
	i as i32
}
