tests/samples/invalid/negative_array_length.pn
fn main() -> i32
{
	var x: [-1]i32;
	return: x[-1]
}
